# fakeduck

./: .gitignore  CMakeLists.txt  README.md  版本日志.md
docs/: 项目架构.md
duck/: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
